Added routing module, replaced on app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<ngui-map [center]="latLng"></ngui-map>
+<router-outlet></router-outlet>
+<!-- <embed name="bgMusic" id="backgroundMusic" src="./assets/bgmusic.mp3" height="0" loop="true" autostart="true"> -->
