--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -5,6 +5,11 @@
         </div>
         <div class="col-md-6 addPokemonContainer">
             <app-pokemons-add></app-pokemons-add>
+            <app-pokemon-clear></app-pokemon-clear>
+            <app-pokemons-added-list></app-pokemons-added-list>
         </div>
     </div>
 </div>
+
+<!--             <embed name="bgMusic" id="backgroundMusic" src="./assets/bgmusic.mp3" height="0" loop="true" autostart="true">
+-->
