--- a/src/app/components/map-component/map-component.component.scss
+++ b/src/app/components/map-component/map-component.component.scss
@@ -14,6 +14,7 @@ ngui-map {
     z-index: 10;
     width: 100%;
     height: 100%;
+    min-height: 300px;
 }
 
 .pokeball {
@@ -26,6 +27,13 @@ ngui-map {
     overflow: hidden;
     box-shadow: inset -1px 1px 0 1px #ccc;
     animation: fall .25s ease-in-out, shake 1.25s cubic-bezier(.36, .07, .19, .97) 3;
+}
+
+.pokemon-image {
+    img {
+        width: 45px;
+        height: 45px;
+    }
 }
 
 .pokeball::before,
