--- a/src/app/components/pokemons-add/pokemons-add.component.html
+++ b/src/app/components/pokemons-add/pokemons-add.component.html
@@ -1,3 +1,3 @@
 <div class="pokedexContainer">
-    <button class="game-button"> Add new pokemon</button>
+    <button class="game-button" (click)="open()"> Add new pokemon</button>
 </div>
