Changed routes, renamed components, add button

--- a/src/app/pages/map/map.page.component.html
+++ b/src/app/pages/map/map.page.component.html
@@ -6,10 +6,11 @@
         <div class="col-md-6 addPokemonContainer">
             <app-pokemons-add></app-pokemons-add>
             <app-pokemon-clear></app-pokemon-clear>
+            <app-music-button></app-music-button>
             <app-pokemons-added-list></app-pokemons-added-list>
         </div>
     </div>
 </div>
 
-<!--             <embed name="bgMusic" id="backgroundMusic" src="./assets/bgmusic.mp3" height="0" loop="true" autostart="true">
+<!--             
 -->
