--- a/src/app/components/map-component/map-component.component.html
+++ b/src/app/components/map-component/map-component.component.html
@@ -1,8 +1,8 @@
 <div class="mapContainer">
-    <ngui-map [center]="config.latLng" [styles]="config.mapStyle" zoom="16" [disableDefaultUI]="true" [scrollwheel]="false">
+    <ngui-map [center]="config.latLng" [styles]="config.mapStyle" zoom="16" [disableDefaultUI]="true">
         <custom-marker [position]="[config.latLng]">
             <div class="pokeball">
-                <div class="pokeball__button"></div>
+                <img src="assets/imgs/animated_pokeball.gif">
             </div>
         </custom-marker>
         <custom-marker *ngFor="let item of randmonPokemons" [position]="item.latLng">
