--- a/src/app/components/map-component/map-component.component.scss
+++ b/src/app/components/map-component/map-component.component.scss
@@ -17,103 +17,10 @@ ngui-map {
     min-height: 300px;
 }
 
-.pokeball {
-    position: relative;
-    width: 30px;
-    height: 30px;
-    background: #fff;
-    border: 0.5px solid #000;
-    border-radius: 50%;
-    overflow: hidden;
-    box-shadow: inset -1px 1px 0 1px #ccc;
-    animation: fall .25s ease-in-out, shake 1.25s cubic-bezier(.36, .07, .19, .97) 3;
-}
-
 .pokemon-image {
     img {
         width: 45px;
         height: 45px;
-    }
-}
-
-.pokeball::before,
-.pokeball::after {
-    content: "";
-    position: absolute;
-}
-
-.pokeball::before {
-    background: red;
-    width: 100%;
-    height: 50%;
-}
-
-.pokeball::after {
-    top: calc(50% - 5px);
-    width: 100%;
-    height: 5px;
-    background: #000;
-}
-
-.pokeball__button {
-    position: absolute;
-    top: calc(50% - 5px);
-    left: calc(50% - 5px);
-    width: 5px;
-    height: 5px;
-    background: #7f8c8d;
-    border: 2px solid #fff;
-    border-radius: 50%;
-    z-index: 10;
-    box-shadow: 0 0 0 0.5px black;
-    animation: blink .5s alternate 7;
-}
-
-
-/* Animation */
-
-@keyframes blink {
-    from {
-        background: #eee;
-    }
-    to {
-        background: #e74c3c;
-    }
-}
-
-@keyframes shake {
-    0 {
-        transform: translate(0, 0) rotate(0);
-    }
-    20% {
-        transform: translate(-10px, 0) rotate(-20deg);
-    }
-    30% {
-        transform: translate(10px, 0) rotate(20deg);
-    }
-    50% {
-        transform: translate(-10px, 0) rotate(-10deg);
-    }
-    60% {
-        transform: translate(10px, 0) rotate(10deg);
-    }
-    100% {
-        transform: translate(0, 0) rotate(0);
-    }
-}
-
-@keyframes fall {
-    0% {
-        top: -200px
-    }
-    60% {
-        top: 0
-    }
-    80% {
-        top: -20px
-    }
-    100% {
-        top: 0
     }
 }
 
@@ -122,11 +29,14 @@ ngui-map {
     margin: 0;
 }
 
-.container-fluid {}
-
 .mapContainer {
     border-radius: 25px;
     overflow: hidden;
     height: 100%;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.pokeball img {
+    width: 55px;
+    height: auto;
 }
