--- a/src/app/pages/map/map.page.component.html
+++ b/src/app/pages/map/map.page.component.html
@@ -5,12 +5,15 @@
         </div>
         <div class="col-md-6 addPokemonContainer">
             <app-pokemons-add></app-pokemons-add>
-            <app-pokemon-clear></app-pokemon-clear>
-            <app-music-button></app-music-button>
+            <div class="row">
+                <div class="col-md-6">
+                    <app-music-button></app-music-button>
+                </div>
+                <div class="col-md-6">
+                    <app-pokemon-clear></app-pokemon-clear>
+                </div>
+            </div>
             <app-pokemons-added-list></app-pokemons-added-list>
         </div>
     </div>
 </div>
-
-<!--             
--->
